tests/checker/diagnostics/0139_adt_variant_branch_result_mismatch_02.ml.infer.expected
File "0139_adt_variant_branch_result_mismatch_02.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0139_adt_variant_branch_result_mismatch_02 is not a valid module name.

File "0139_adt_variant_branch_result_mismatch_02.ml", line 4, characters 14-15:
4 |   | Flag y -> y
                  ^
Error: The value y has type bool but an expression was expected of type int
