tests/checker/diagnostics/0139_adt_variant_branch_result_mismatch_02.ml
type rec_beta = Num of int | Flag of bool
let read_beta = function
  | Num x -> x
  | Flag y -> y
